src/components/Header/style.css
.header {
    width: 100%;
    min-height: 10vh;
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding-block: 2.5vh;
    border-bottom: 1px solid var(--borderDarkColor);
}

.header * {
    display: flex;
}

.container {
    width: 90%;
    justify-content: space-between;
    align-items: center;
    flex: auto auto;
    flex-wrap: wrap;
    /* display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
    /* grid-template-columns: auto minmax(350px, 1fr); */
    gap: 3vh;
}

.container-logo-title {
    align-items: center;
}

/*----------------------------------------*/
.logo {
    width: 10vh !important;
    height: 10vh;
    background-image: url(../../images/logo.svg);
    background-repeat: no-repeat;
    background-size: contain;
    cursor: pointer;
}

/*----------------------------------------*/
.container-logo-title {
    justify-content: space-between;
    gap: 3vh;
}

.container-title {
    height: 100%;
    flex-grow: 1;
    flex-direction: column;
    justify-content: space-around;
    row-gap: 0.7vh;
}

/*----------------------------------------*/
.button-header {
    max-width: 100%;
    justify-content: center;
}

@media (width < 815px) {
    .button-header {
        width: 100%;
        justify-content: center;
    }
}

